Prepare 0.1.0-alpha1 release